2019-08-30  Jason Merrill  <jason@redhat.com>

	* pt.c (generic_targs_for): Factor out of
	coerce_template_args_for_ttp.
	(get_underlying_template, tsubst_friend_function): Use it.
	* constraint.cc (get_normalized_constraints_from_decl)
	(normalize_concept_definition): Use it.

	* parser.c (cp_parser_constraint_expression): Add location wrapper.
	(cp_parser_constraint_primary_expression): Likewise.
	(cp_parser_binary_expression): Add wrappers to operands when
	no_toplevel_fold_p.
	* constraint.cc (diagnose_atom_failure): Strip location wrapper.

	* logic.cc (subsumes): Handle error_mark_node.

	* constraint.cc: Use cp_expr_location instead of EXPR_LOCATION.

2019-08-19  Andrew Sutton  <asutton@lock3software.com>

	Normalize constraints before satisfaction.
	* constexpr.c (cxx_eval_constant_expression): Use
	satisfy_constraint_expression.
	* constraint.cc (check_constraint_atom): Add check for misuse of
	function concepts.
	(get_concept_check_template): New.
	(debug_parameter_mapping): New.
	(debug_argument_list): New.
	(build_parameter_mapping): Compute the maximum depth for finding
	parameters in the expression.
	(norm_info): Track more information about the normalization of
	each term.
	(normalize_logical_operation): Add the normalization context to the
	constraint.
	(normalize_concept_check): Add check for misuses of function concepts;
	enable template processing to suppress spurious errors.
	(normalize_atom): Add the normalization context to the
	expression.
	(get_normalized_constraints_from_decl): Build the normalization
	arguments from the full set of template parameters of the most
	general template. This guarantees that we have no concrete arguments
	in the parameter mapping (e.g., from template members of class
	templates).
	(normalize_concept_definition): New.
	(normalize_template_requirements): New.
	(normalize_nontemplate_requirements): New.
	(normalize_constraint_expression): New.
	(tsubst_parameter_mapping): New.